# msi2lmp_c

./: .gitignore  CMakeLists.txt  README.md
arg/: pcff_interface_v1_5.off
arg/CSH/: csh1.car  csh1.data  csh1.mdf
arg/HAP/: HAP_PEG.car  HAP_PEG.data  HAP_PEG.mdf  HAP_PEG_HAP.car  HAP_PEG_HAP.mdf  HAP_PEG_HAP_mid.car  HAP_PEG_HAP_mid.mdf  HAP_PEG_pcff.car  HAP_PEG_pcff.data  HAP_PEG_pcff.mdf
arg/polyurea/: polyurea_1b_1c_01.car  polyurea_1b_1c_01.data  polyurea_1b_1c_01.mdf
arg/quartz/: quartz_alpha_ortho.car  quartz_alpha_ortho.data  quartz_alpha_ortho.mdf  quartz_alpha_ortho_unit.car  quartz_alpha_ortho_unit.data  quartz_alpha_ortho_unit.mdf
src/: CheckLists.c  Forcefield.h  GetParameters.c  InitializeItems.c  MakeLists.c  Makefile  ReadCarFile.c  ReadFrcFile.c  msi2lmp.c  msi2lmp.h
